<resources>
    <string name="app_name">Food Tracker</string>
    <string name="app_name_long">Privacy Friendly Food Tracker</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Calendar</string>
    <string name="action_tutorial">Tutorial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--###HELP###-->
    <string name="help">Help</string>

    <string name="help_whatis">What is Privacy Friendly Food Tracker?</string>
    <string name="help_whatis_answer">Privacy Friendly Food Tracker is an app that allows you to track your calorie intake while maintaining your privacy.</string>
    <string name="help_feature_one">Tracking your food intake</string>
    <string name="help_feature_one_answer">To track your calorie intake, touch a date on the calendar. It will take you to an overview for the chosen date,
        displaying everything you ate on that particular date. To add an item, touch the button in the bottom right corner. <br />
        To edit an item, touch an entry. <br />
        To delete one or more entries, press on the item you want to delete for a long time and confirm the deletion.
    </string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Food Tracker does not require any permissions. It furthermore does not include any tracking mechanisms or advertisements.
    All information you store with this app are encrypted and only visible to you. The search does however make requests to an online (www.openfoodfacts.org) database.
    This could potentially still expose some data about your eating habits to the database. If you do not want this, you can simply not use the online search(no data is sent until you press the \"search\" button).</string>
    <string name="help_permission">Which permissions does the app require</string>
    <string name="help_permission_answer">This application requires no permissions.</string>

    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version_number">%s</string>
    <string name="version">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">André Lutz, Simon Reinkemeier</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-food-tracker">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>

    <!-- ### TUTORIAL DIALOG ### -->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">This App helps you track your daily calorie intake without sharing your eating habits with 3rd parties.
    To guarantee this, we do not request any permissions from you.
    The search does however make requests to an online (www.openfoodfacts.org) database.
    This could potentially still expose some data about your eating habits to the database.
    If you do not want this, you can simply not use the online search(no data is sent until you press the \"search\" button).</string>

    <string name="slide2_heading">Key Elements</string>
    <string name="slide2_text">To add an entry, touch a day in the calendar.
    This takes you to an overview of the consumed calories for the chosen date.
        To add an entry, touch the "+" symbol on the overview screen. </string>
    <string name="slide3_heading">Github and Guide</string>
    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the "Help" page.</string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_activity_food">Add a new entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="title_activity_overview">Overview</string>
    <string name="hint_food_name">Name</string>
    <string name="hint_food_amount">Amount in g</string>
    <string name="hint_food_calories">kCal/100g</string>
    <string name="error_food_missing">"Please give your food a name"</string>
    <string name="error_amount_missing">"Please put in the amount of food you ate"</string>
    <string name="error_calories_missing">"Please put in how many calories your food has per 100"</string>
    <string name="error_amount_nan">"Only numbers are allowed for Amount"</string>
    <string name="error_calories_nan">"Only numbers are allowed for Calories"</string>
    <string name="error_database">"Could not write to database"</string>
    <string name="total_calories">"kCal"</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="delete_entry_prompt">Delete?</string>


    <string name="setup_step_generating_key">Generating Key</string>
    <string name="setup_step_generating_passphrase">Generating Passphrase</string>
    <string name="setup_step_creating_encrypted_databas">Encrypting Database</string>
    <string name="generate_key_header">Preparation</string>

    <string name="search">Search</string>
    <string name="add">Add</string>

    <string name="action_statistic">Statistics</string>
    <string-array name="statisticPicker">
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string name="caloriePerWeek">Average calories per day:</string>
    <string name="caloriePerMonth">Average calories per month:</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="period">Period</string>
    <string name="decline">Cancel</string>
    <string name="save">Save</string>

    <string name="search_for">Search for a product</string>
    <string name="error_carbs_nan">Only numbers are allowed for carbs</string>
    <string name="error_protein_nan">Only numbers are allowed for protein</string>
    <string name="error_fat_nan">Only numbers are allowed for fat</string>
    <string name="hint_food_macros">g/100g</string>
    <string name="hint_food_carbs">Carbs in g/100g</string>
    <string name="hint_food_protein">Protein in g/100g</string>
    <string name="hint_food_fat">Fat in g/100g</string>
    <string name="carbsPerWeek">Average carbs (sugar) per day</string>
    <string name="proteinPerWeek">Average protein per day</string>
    <string name="fatPerWeek">Average fat (saturated fat) per day</string>
    <string name="hint_food_sugar">Sugar in g/100g</string>
    <string name="hint_food_satFat">Saturated Fat in g/100g</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_settings2">Settings</string>
    <string name="error_fieldname_nan">Only numbers are allowed for %1$s</string>
    <string name="statistics_average_nutriments">Average %1$s per day:\n%2$s %3$s</string>
    <string name="calories">Calories</string>
    <string name="daily_goals_setting_category_heading">Your daily goals</string>
    <string name="daily_goals_dont_exceed_setting">Don\'t exceed %1$s goal</string>
    <string name="daily_goal_setting">%1$s goal in %2$s</string>
    <string name="overview_nutriment_amount">%1$.1f %2$s</string>
    <string name="overview_nutriment_amount_of_goal">%1$.1f/%2$.1f %3$s</string>
    <string name="nutriment_name_carbs">Carbs</string>
    <string name="nutriment_name_sugar">Sugar</string>
    <string name="nutriment_name_protein">Protein</string>
    <string name="nutriment_name_fat">Fat</string>
    <string name="nutriment_name_sat_fat">Sat. Fat</string>
    <string name="nutriment_name_salt">Salt</string>
    <string name="nutriment_name_fiber">Fiber</string>
    <string name="nutriment_name_vitamin_a">Vitamin A</string>
    <string name="nutriment_name_beta_carotene">Beta-Carotene</string>
    <string name="nutriment_name_vitamin_d">Vitamin D</string>
    <string name="nutriment_name_vitamin_e">Vitamin E</string>
    <string name="nutriment_name_vitamin_k">Vitamin K</string>
    <string name="nutriment_name_vitamin_b1">Vitamin B1</string>
    <string name="nutriment_name_vitamin_b2">Vitamin B2</string>
    <string name="nutriment_name_vitamin_b6">Vitamin B6</string>
    <string name="nutriment_name_vitamin_b12">Vitamin B12</string>
    <string name="nutriment_name_vitamin_c">Vitamin C</string>
    <string name="nutriment_name_niacin">Niacin</string>
    <string name="nutriment_name_folate">Folate</string>
    <string name="nutriment_name_pantothenic_acid">Pantothenic Acid</string>
    <string name="nutriment_name_biotin">Biotin</string>
    <string name="nutriment_name_natrium">Natrium</string>
    <string name="nutriment_name_chloride">Chloride</string>
    <string name="nutriment_name_potassium">Potassium</string>
    <string name="nutriment_name_calcium">Calcium</string>
    <string name="nutriment_name_phosphorous">Phosphorous</string>
    <string name="nutriment_name_magnesium">Magnesium</string>
    <string name="nutriment_name_iron">Iron</string>
    <string name="nutriment_name_iodine">Iodine</string>
    <string name="nutriment_name_fluoride">Fluoride</string>
    <string name="nutriment_name_zinc">Zinc</string>
    <string name="nutriment_name_selenium">Selenium</string>
    <string name="nutriment_name_copper">Copper</string>
    <string name="nutriment_name_manganese">Manganese</string>
    <string name="nutriment_name_chromium">Chromium</string>
    <string name="nutriment_name_molybdenum">Molybdenum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
