<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic__edit" android:padding="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_food_amount" />

    <EditText
        android:id="@+id/input_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_dialog"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:text="@string/decline"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_dialog"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:text="@string/save"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
